[project]
name = "sdlc-framework"
version = "0.0.0"
description = "Deterministic, auditable, multi-agent SDLC orchestration framework on top of Claude Code."
readme = "README.md"
license = { text = "TBD" }
authors = [
    { name = "Vuonglq01685" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2,<3",   # cap: pydantic 2→3 will introduce schema breaks (v3 is on the roadmap)
    "pyyaml>=6,<7",     # cap: pyyaml 6→7 has not been released; defensive guard against future major
    "typer>=0.15,<0.26",  # floor: 0.15+ is when --version eager-callback semantics stabilised; cap matches lockfile (0.25.x)
    "rich>=13,<15",  # cap: rich 14→15 defensive guard. Direct dep added in Story 1.17 per cli/output.py rich console (AC5.6).
    "tomli>=2.0.1; python_version < '3.11'",  # tomllib backport — stdlib tomllib is 3.11+ (PEP 680); requires-python floor is 3.10 (config/hooks.py, cli/status.py).
]

[project.scripts]
sdlc = "sdlc.cli.main:app"

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0,<3",          # cap: mypy 1→2 introduced inference breaks; lock guards 2.x
    "pytest>=8.0.0,<10",        # cap: pytest 8→9 has --strict-config / filterwarnings shifts
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.6.0",
    "pre-commit>=4.0.0,<5",
    "mkdocs>=1.6.0,<2",
    "hypothesis>=6.100,<7",
    "pytest-benchmark>=5.0.0,<6",  # floor: 4.x had pedantic(rounds=1) regressions; cap: 6.x may shift pedantic API (Story 1.15 perf gate)
    "pytest-asyncio>=0.23",     # async test support for hooks/runner async surface (Story 2A.4)
    "types-PyYAML",             # mypy stubs for pyyaml (dev-only; not shipped at runtime)
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mutmut>=3.0.0,<4",
    "playwright>=1.49,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sdlc"]
# EPIC-3 prep P5: the content trees below ship via force-include (ADR-005).
# Newer hatchling raises ValueError on duplicate archive paths when the standard
# `packages` selection ALSO picks up a force-included file (every file under each
# tree collides — first observed at agents/.gitkeep, then agents/index.yaml).
# `exclude` applies only to the standard selection; force-include is immune — so
# each content tree ships exactly once, from force-include alone. The importable
# .py under hooks/claude_hooks/workflows/workflows_yaml ships via force-include at
# the same archive path, so imports are unaffected.
exclude = [
    "src/sdlc/agents/**",
    "src/sdlc/claude_hooks/**",
    "src/sdlc/commands/**",
    "src/sdlc/hooks/**",
    "src/sdlc/workflows/**",
    "src/sdlc/workflows_yaml/**",
    "src/sdlc/skills/**",
    "src/sdlc/memory/**",
    "src/sdlc/dashboard/static/**",
]
# ADR-005: force-include the content trees under src/sdlc/ that ship as
# package_data. Each tree is created as content lands in later stories
# (agents → Story 2A.2; commands → Story 2A.6/2A.8+; workflows → Story 2A.1;
# hooks → Story 2A.4-2A.6; skills/memory/dashboard → Stories 2A/5/x).
# Empty trees are NOT pre-created; force-include is a no-op when the source
# path is missing (verified: hatch silently skips missing force-include sources).
# Story 1.16's `sdlc init` is the consumer — it copies whatever exists from
# these trees into `.claude/` at init time.

[tool.hatch.build.targets.wheel.force-include]
"src/sdlc/agents" = "sdlc/agents"
"src/sdlc/claude_hooks" = "sdlc/claude_hooks"
"src/sdlc/commands" = "sdlc/commands"
"src/sdlc/hooks" = "sdlc/hooks"
"src/sdlc/workflows" = "sdlc/workflows"
"src/sdlc/workflows_yaml" = "sdlc/workflows_yaml"
"src/sdlc/skills" = "sdlc/skills"
"src/sdlc/memory" = "sdlc/memory"
# Story 5.2: ship runtime CSS only; .stylelintrc.json is CI-only (D1).
"src/sdlc/dashboard/static/.gitkeep" = "sdlc/dashboard/static/.gitkeep"
"src/sdlc/dashboard/static/index.html" = "sdlc/dashboard/static/index.html"
"src/sdlc/dashboard/static/styles/tokens.css" = "sdlc/dashboard/static/styles/tokens.css"
"src/sdlc/dashboard/static/styles/focus-motion.css" = "sdlc/dashboard/static/styles/focus-motion.css"
"src/sdlc/dashboard/static/fixtures/reduced-motion-pulse.html" = "sdlc/dashboard/static/fixtures/reduced-motion-pulse.html"
"src/sdlc/dashboard/static/components/live-dot/live-dot.css" = "sdlc/dashboard/static/components/live-dot/live-dot.css"
"src/sdlc/dashboard/static/components/live-dot/live-dot.js" = "sdlc/dashboard/static/components/live-dot/live-dot.js"
"src/sdlc/dashboard/static/components/live-dot/live-dot.fixture.html" = "sdlc/dashboard/static/components/live-dot/live-dot.fixture.html"
"src/sdlc/dashboard/static/components/freshness-footer/freshness-footer.css" = "sdlc/dashboard/static/components/freshness-footer/freshness-footer.css"
"src/sdlc/dashboard/static/components/freshness-footer/freshness-footer.js" = "sdlc/dashboard/static/components/freshness-footer/freshness-footer.js"
"src/sdlc/dashboard/static/components/signoff-cell/signoff-cell.css" = "sdlc/dashboard/static/components/signoff-cell/signoff-cell.css"
"src/sdlc/dashboard/static/components/signoff-cell/signoff-cell.js" = "sdlc/dashboard/static/components/signoff-cell/signoff-cell.js"
"src/sdlc/dashboard/static/components/phase-cell/phase-cell.css" = "sdlc/dashboard/static/components/phase-cell/phase-cell.css"
"src/sdlc/dashboard/static/components/phase-cell/phase-cell.js" = "sdlc/dashboard/static/components/phase-cell/phase-cell.js"
"src/sdlc/dashboard/static/components/phase-item-row/phase-item-row.css" = "sdlc/dashboard/static/components/phase-item-row/phase-item-row.css"
"src/sdlc/dashboard/static/components/phase-item-row/phase-item-row.js" = "sdlc/dashboard/static/components/phase-item-row/phase-item-row.js"
"src/sdlc/dashboard/static/components/phase-tracker/phase-tracker.css" = "sdlc/dashboard/static/components/phase-tracker/phase-tracker.css"
"src/sdlc/dashboard/static/components/phase-tracker/phase-tracker.js" = "sdlc/dashboard/static/components/phase-tracker/phase-tracker.js"
"src/sdlc/dashboard/static/test-fixtures/signoff-states.html" = "sdlc/dashboard/static/test-fixtures/signoff-states.html"
"src/sdlc/dashboard/static/icons/sprite.svg" = "sdlc/dashboard/static/icons/sprite.svg"
"src/sdlc/dashboard/static/fonts/OFL.txt" = "sdlc/dashboard/static/fonts/OFL.txt"
"src/sdlc/dashboard/static/fonts/fraunces-400.woff2" = "sdlc/dashboard/static/fonts/fraunces-400.woff2"
"src/sdlc/dashboard/static/fonts/fraunces-500.woff2" = "sdlc/dashboard/static/fonts/fraunces-500.woff2"
"src/sdlc/dashboard/static/fonts/fraunces-600.woff2" = "sdlc/dashboard/static/fonts/fraunces-600.woff2"
"src/sdlc/dashboard/static/fonts/inter-300.woff2" = "sdlc/dashboard/static/fonts/inter-300.woff2"
"src/sdlc/dashboard/static/fonts/inter-400.woff2" = "sdlc/dashboard/static/fonts/inter-400.woff2"
"src/sdlc/dashboard/static/fonts/inter-500.woff2" = "sdlc/dashboard/static/fonts/inter-500.woff2"
"src/sdlc/dashboard/static/fonts/inter-600.woff2" = "sdlc/dashboard/static/fonts/inter-600.woff2"
"src/sdlc/dashboard/static/fonts/inter-700.woff2" = "sdlc/dashboard/static/fonts/inter-700.woff2"
"src/sdlc/dashboard/static/fonts/jetbrains-mono-400.woff2" = "sdlc/dashboard/static/fonts/jetbrains-mono-400.woff2"
"src/sdlc/dashboard/static/fonts/jetbrains-mono-500.woff2" = "sdlc/dashboard/static/fonts/jetbrains-mono-500.woff2"
"src/sdlc/dashboard/static/components/pills/pills.css" = "sdlc/dashboard/static/components/pills/pills.css"
"src/sdlc/dashboard/static/components/pills/pills.js" = "sdlc/dashboard/static/components/pills/pills.js"
"src/sdlc/dashboard/static/components/pills/pills.registry.html" = "sdlc/dashboard/static/components/pills/pills.registry.html"
"src/sdlc/dashboard/static/components/inline-code/inline-code.css" = "sdlc/dashboard/static/components/inline-code/inline-code.css"
"src/sdlc/dashboard/static/components/backlog-tree/backlog-tree.css" = "sdlc/dashboard/static/components/backlog-tree/backlog-tree.css"
"src/sdlc/dashboard/static/components/backlog-tree/backlog-tree.js" = "sdlc/dashboard/static/components/backlog-tree/backlog-tree.js"
"src/sdlc/dashboard/static/components/backlog-tree/backlog-tree.fixture.html" = "sdlc/dashboard/static/components/backlog-tree/backlog-tree.fixture.html"
"src/sdlc/dashboard/static/components/masthead/masthead.css" = "sdlc/dashboard/static/components/masthead/masthead.css"
"src/sdlc/dashboard/static/components/masthead/masthead.js" = "sdlc/dashboard/static/components/masthead/masthead.js"
"src/sdlc/dashboard/static/components/masthead/masthead.fixture.html" = "sdlc/dashboard/static/components/masthead/masthead.fixture.html"
"src/sdlc/dashboard/static/components/kpi-strip/kpi-strip.css" = "sdlc/dashboard/static/components/kpi-strip/kpi-strip.css"
"src/sdlc/dashboard/static/components/kpi-strip/kpi-strip.js" = "sdlc/dashboard/static/components/kpi-strip/kpi-strip.js"
"src/sdlc/dashboard/static/components/kpi-strip/kpi-strip.fixture.html" = "sdlc/dashboard/static/components/kpi-strip/kpi-strip.fixture.html"
"src/sdlc/dashboard/static/fonts/jetbrains-mono-600.woff2" = "sdlc/dashboard/static/fonts/jetbrains-mono-600.woff2"

[tool.hatch.build.targets.sdist]
# PRD §499 + §216 mandate wheel-only distribution for v1.
# `exclude = ["**"]` produces a near-empty sdist containing only the 4 files hatch
# auto-includes (PKG-INFO, pyproject.toml, .gitignore, README.md ~ 2.9 KB total) — not
# a fully-suppressed target. Hatch has no clean "skip-sdist" toggle when the wheel
# target is also defined. The absolute wheel-only guarantee in CI is enforced by
# `uv build --wheel` in .github/workflows/release.yml plus the AC3 grep assertion
# verifying no `*.tar.gz` ships in the published artifact set.
exclude = ["**"]

# =============================================================================
# Ruff — lint + format (ADR-002)
# =============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]
extend-exclude = [
    "docs/ux/",
    ".claude/",
    ".agents/",
    "_bmad/",
    "_bmad-output/",
    "_site/",
    "tests/fixtures/",
]  # `docs/ux/` matches mkdocs.yml `exclude_docs: ux/` scope (ADR-011); `.agents/` BMad templates are not product Python; `tests/fixtures/` are brownfield sample trees (Story 3.2 corpus), not product Python.

[tool.ruff.lint]
# Project-specific noqa used by scripts/check_no_direct_state_writes.py (not a Ruff code).
external = ["state-write"]
select = [
    "E",     # pycodestyle errors
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "I",     # isort (required-imports lives here)
    "B",     # flake8-bugbear
    "C90",   # mccabe (complexity)
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "PL",    # pylint (PLR0915 = too-many-statements)
    "RUF",   # ruff-specific rules
]
ignore = [
    "PLR0913",  # too-many-arguments — engine signatures often legitimately wide
]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.ruff.lint.pylint]
max-statements = 50

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
known-first-party = ["sdlc"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # magic numbers in tests are fine
    "PLC0415",  # deferred imports inside functions needed for POSIX-only modules skipped on Windows
    "PLW1510",  # subprocess.run check=False is intentional in test helpers
]
"src/sdlc/cli/**" = [
    "PLC0415",  # deferred imports in cli/ per Architecture §488 cold-start budget (< 200 ms)
]
"src/sdlc/config/secrets.py" = [
    "C901",     # _sanitize_value complexity — pre-existing (Story 1.8); acceptable for recursive sanitizer
    "PLR0911",  # too many returns — pre-existing (Story 1.8); acceptable for recursive sanitizer
]
"tests/property/test_disjoint_writes_static_check.py" = [
    "PLR0911",  # _ref_match mirrors the implementation algorithm for adversarial cross-checking
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# Mypy — strict type checking (ADR-003)
# =============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = ["src", "tests"]
namespace_packages = true
explicit_package_bases = true
show_error_codes = true
pretty = true
warn_unused_configs = true
warn_unreachable = true
extra_checks = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

# sdlc.concurrency and sdlc.state.atomic are POSIX-only. sys.platform guards
# make code after the ImportError raise (locks.py, atomic.py) and inside
# "if sys.platform != 'win32':" blocks (__init__.py) appear "unreachable" when
# mypy runs on Windows. warn_unreachable is disabled only for these files;
# all strict checks hold.
[[tool.mypy.overrides]]
module = [
    "sdlc.concurrency",
    "sdlc.concurrency.locks",
    "sdlc.state",
]
warn_unreachable = false

# sdlc.state.atomic is POSIX-only and raises ImportError on Windows; mypy on
# Windows still parses the module body and flags POSIX-only attributes from
# fcntl as missing. Narrow the suppression to the specific error codes that
# fire from POSIX-only paths instead of disabling type-checking wholesale.
# All strict checks (disallow_untyped_defs, disallow_any_generics, etc.) still
# hold; only platform-conditional resolution is suppressed.
[[tool.mypy.overrides]]
module = "sdlc.state.atomic"
disable_error_code = ["unreachable", "attr-defined", "no-any-return"]

# sdlc.journal.writer is POSIX-only and raises ImportError on Windows; mypy on
# Windows still parses the module body and flags POSIX-only attributes from
# fcntl/os as missing. Per Story 1.11 review (Blind MEDIUM): narrow the override
# to only the platform-guard "unreachable" diagnostic. Specific attr-defined
# false-positives (e.g. file_lock import) carry per-line ``# type: ignore`` so
# real attr typos still surface. Same drift exists in state/atomic — back-port
# in a follow-up story.
[[tool.mypy.overrides]]
module = "sdlc.journal.writer"
warn_unreachable = false

# sdlc.journal.__init__ uses conditional imports for the POSIX-only writer.
[[tool.mypy.overrides]]
module = "sdlc.journal"
warn_unreachable = false

# sdlc.cli.init and sdlc.cli.scan use a sys.platform == "win32" guard to select the
# atomic-write path; the POSIX branch after the early return is unreachable on Windows.
[[tool.mypy.overrides]]
module = ["sdlc.cli.init", "sdlc.cli.scan"]
warn_unreachable = false

# Conditional stdlib imports under requires-python>=3.10 with python_version=3.10:
# tomllib (config/hooks.py, cli/status.py) and importlib.resources.abc (cli/init.py)
# are 3.11+ only. On the 3.10 CI cell they are import-not-found; on 3.11+ cells the
# runtime module exists but is untyped at python_version=3.10 ("Skipping analyzing").
# The diagnostic flips per interpreter, so a fixed inline `# type: ignore[import-not-
# found]` is reported "unused" on whichever cell hits the other branch
# (warn_unused_ignores). ignore_missing_imports silences both, matrix-consistently.
[[tool.mypy.overrides]]
module = ["tomllib", "tomli", "importlib.resources.abc"]
ignore_missing_imports = true

# =============================================================================
# Pytest + Coverage (ADR-004)
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# `--import-mode=prepend` (pytest CLI; not a tool.pytest.ini_options key in 8.x) is
# pinned so cross-test imports (`from integration._abstraction_adequacy_helpers
# import …`) resolve via tests/<package>/__init__.py packages on sys.path. Switching
# to "importlib" would break Story 1.14's helper imports and any test that relies on
# the implicit `tests/` prefix in its import path. Story 1.14 review item.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=prepend",
    "--cov=src/sdlc",
    "--cov=scripts",
    "--cov-report=term-missing",
    "--cov-report=xml",
    # Prep-sprint C3 (2026-05-21) raised the floor from 85 → 87 after closing the 18 xfail
    # markers (EPIC-2A-D3 first half). Final 87 → 90 push tracked in
    # EPIC-2B-DEBT-COVERAGE-90 (see debt-budget.yaml).
    "--cov-fail-under=87",
]
xfail_strict = true
filterwarnings = ["error"]
asyncio_mode = "auto"
markers = [
    "unit: fast, isolated unit tests",
    "integration: multi-module or boundary-crossing tests",
    "property: hypothesis-driven property and invariant tests",
    "chaos: POSIX-only kill-point chaos tests (Story 1.10)",
    "benchmark: performance and timing benchmarks (pytest-benchmark)",
    "e2e: full end-to-end scenarios spanning the CLI + filesystem",
    "parity: engine-vs-claude-hooks parity gate (Story 2A.6)",
    "parity_perf: latency budget benchmarks for the Claude-side hook roundtrip (Story 2A.6)",
    "claude_version_gate: exercises real Claude Code version pre-flight (Story 2B.2)",
    "mutation: adopt-module mutation testing gate (Story 3.7)",
]

[tool.coverage.run]
source = ["src/sdlc", "scripts"]
omit = [
    "scripts/validate_specialists.py",
    # POSIX-only; fcntl is not available on Windows. Correctness is verified by
    # the test suite on Linux CI (ubuntu-latest, Story 1.3). Coverage is not
    # measured here because the module cannot be imported on the Windows dev host.
    "src/sdlc/concurrency/locks.py",
    # POSIX-only; fcntl + parent-dir fsync require Linux/macOS. Chaos tests run
    # on ubuntu-latest CI. Not importable on the Windows dev host.
    "src/sdlc/state/atomic.py",
    # Platform-conditional import hub: the "if sys.platform != 'win32'" branch
    # is unreachable on Windows. Covered by Linux CI.
    "src/sdlc/state/__init__.py",
    # POSIX-only; O_APPEND + flock require Linux/macOS. Not importable on Windows.
    "src/sdlc/journal/writer.py",
    # Platform-conditional import hub for journal: mirrors state/__init__.py omit.
    "src/sdlc/journal/__init__.py",
    # POSIX-only siblings of writer.py (imported only by writer); Linux CI provides cov.
    "src/sdlc/journal/_canonical.py",
    "src/sdlc/journal/_seq.py",
]
branch = true
# parallel = true intentionally omitted: single-process pytest does not need it.
# Re-enable together with [tool.coverage.paths] + a `coverage combine` step when xdist lands.

[tool.coverage.report]
# Prep-sprint C3 (2026-05-21): mirrors [tool.pytest.ini_options] addopts cov gate;
# raised 85 → 87 after closing 18 xfails. Final 87 → 90 push: EPIC-2B-DEBT-COVERAGE-90.
fail_under = 87
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "if sys\\.platform != \"win32\":",  # POSIX-only guard; covered on Linux CI (ubuntu-latest)
]
partial_branches = [
    "if TYPE_CHECKING:",   # exclude_also drops the line; this drops the branch arc too
    "if sys\\.platform",   # POSIX-only guards; covered on Linux CI
]

# =============================================================================
# SDLC tool config (Story 2B.2 — NFR-COMPAT-5 minimum Claude Code version)
# =============================================================================
[tool.sdlc]
claude_code_min_version = "2.0.0"

# =============================================================================
# Hook registry (AC2, Story 2A.4)
# D-decision: AC11 chose D1 — new src/sdlc/config/hooks.py for hook-registry loader
# =============================================================================
[tool.sdlc.hooks]
pre_write = ["naming_validator", "phase_gate"]

# =============================================================================
# Mutation testing — adopt module only (Story 3.7, AC2, D2=a)
# =============================================================================
[tool.mutmut]
paths_to_mutate = ["src/sdlc/adopt/"]
# The global pytest addopts force `--cov-fail-under=87`. mutmut runs each mutant's covering
# tests in-process via `pytest.main()`, which applies those addopts — so a passing subset
# (whose coverage of all of `src/sdlc` is far below 87%) would exit non-zero and be miscounted
# as a KILL, inflating the kill rate to a meaningless ~100%. Disable coverage for mutmut's
# pytest runs; mutmut maps mutants->tests with its own `coverage.Coverage`, so selection is
# unaffected. (Story 3.7 / CR3.7-W3 — verified on POSIX.)
pytest_add_cli_args = ["--no-cov"]
# Scope mutmut's coverage-mapping AND per-mutant runs to the adopt-covering suite. Without this,
# mutmut collects the whole `tests/` tree (testpaths=["tests"]) inside its `mutants/` sandbox and
# aborts on unrelated modules (e.g. tests/benchmark/test_scan_perf.py is unimportable there),
# producing a meaningless 0/N. This is the verified-green adopt suite (Story 3.7 / CR3.7-W3).
tests_dir = [
    "tests/unit/adopt/",
    "tests/property/test_source_untouched_invariant.py",
    "tests/property/test_source_untouched_adversarial.py",
    "tests/property/test_source_untouched_submodule.py",
    "tests/property/test_source_untouched_stateful.py",
    "tests/integration/test_adopt_mode_invariant.py",
]
# mutmut copies only `paths_to_mutate` into its `mutants/` sandbox and removes the real `src`
# from sys.path, so adopt's sibling imports (sdlc.errors, sdlc.contracts, sdlc.concurrency, ...)
# vanish and every test errors out. Copy the rest of the `sdlc` package (everything EXCEPT adopt,
# which is the mutated tree) into the sandbox so imports resolve. (Story 3.7 / CR3.7-W3.)
also_copy = [
    "src/sdlc/__init__.py",
    "src/sdlc/agents",
    "src/sdlc/claude_hooks",
    "src/sdlc/cli",
    "src/sdlc/commands",
    "src/sdlc/concurrency",
    "src/sdlc/config",
    "src/sdlc/contracts",
    "src/sdlc/dashboard",
    "src/sdlc/dispatcher",
    "src/sdlc/engine",
    "src/sdlc/errors",
    "src/sdlc/hooks",
    "src/sdlc/ids",
    "src/sdlc/journal",
    "src/sdlc/memory",
    "src/sdlc/migrations",
    "src/sdlc/runtime",
    "src/sdlc/signoff",
    "src/sdlc/skills",
    "src/sdlc/specialists",
    "src/sdlc/state",
    "src/sdlc/telemetry",
    "src/sdlc/workflows",
    "src/sdlc/workflows_yaml",
]
